--- a/personal_village/pubspec.yaml
+++ b/personal_village/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
+  bloc: ^8.1.2
+  uuid: ^4.1.0
+  dio: ^5.3.3
+  get_it: ^7.6.4
+  flutter_bloc: ^8.1.3
+  formz: ^0.6.1
 
 dev_dependencies:
   flutter_test:
