--- a/personal_village/pubspec.yaml
+++ b/personal_village/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   get_it: ^7.6.4
   flutter_bloc: ^8.1.3
   formz: ^0.6.1
+  flutter_native_splash: ^2.3.3
+  shared_preferences: ^2.2.2
+  go_router: ^11.1.4
 
 dev_dependencies:
   flutter_test:
