added conversation and chat functionality

--- a/personal_village/pubspec.yaml
+++ b/personal_village/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_native_splash: ^2.3.3
   shared_preferences: ^2.2.2
   graphview: ^1.2.0
+  web_socket_channel: ^3.0.0
 
 dev_dependencies:
   flutter_test:
